--- a/src/app/components/app-header/app-header.component.html
+++ b/src/app/components/app-header/app-header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-    <span>Happy 7 year anniversary!!</span>
+    <span>happy seven year anniversary</span>
     <span class="example-spacer"></span>
     <button mat-icon-button class="heart-icon" aria-label="I love you!">
         <mat-icon>favorite</mat-icon>
