got quote generator

--- a/src/app/views/things-i-love-view/things-i-love-view.component.html
+++ b/src/app/views/things-i-love-view/things-i-love-view.component.html
@@ -1,1 +1,5 @@
-<p>things-i-love-view works!</p>
+<div class="love-view">
+    <button mat-button (click)="generateNewQuote()">press to find out a new thing I love about you</button>
+    <br>
+    <mat-card>{{currentQuote}}</mat-card>
+</div>
