--- a/src/app/components/app-header/app-header.component.css
+++ b/src/app/components/app-header/app-header.component.css
@@ -3,6 +3,7 @@
 }
 
 .mat-toolbar {
+    opacity: 0.3;
 }
 
 button.heart-icon {
@@ -10,3 +11,18 @@ button.heart-icon {
     height: 75%;
 }
 
+.sidenav-container {
+    flex: 1;
+    .sidenav {
+        min-width: 240px;
+        a {
+            display: block;
+            padding: 6px 24px;
+            width: 100%;
+            text-align: left;
+        }
+    }
+    main {
+        padding: 18px 24px;
+    }
+}
