--- a/src/app/components/app-header/app-header.component.html
+++ b/src/app/components/app-header/app-header.component.html
@@ -1,7 +1,16 @@
 <mat-toolbar>
+    <button mat-icon-button class="example-icon" aria-label="menu">
+        <mat-icon>menu</mat-icon>
+    </button>
     <span>happy seven year anniversary</span>
     <span class="example-spacer"></span>
     <button mat-icon-button class="heart-icon" aria-label="I love you!">
         <mat-icon>favorite</mat-icon>
     </button>
 </mat-toolbar>
+
+<mat-tab-group>
+    <mat-tab label="First"> Content 1 </mat-tab>
+    <mat-tab label="Second"> Content 2 </mat-tab>
+    <mat-tab label="Third"> Content 3 </mat-tab>
+</mat-tab-group>
