--- a/src/app/components/app-header/app-header.component.html
+++ b/src/app/components/app-header/app-header.component.html
@@ -1,16 +1,15 @@
 <mat-toolbar>
-    <button mat-icon-button class="example-icon" aria-label="menu">
-        <mat-icon>menu</mat-icon>
-    </button>
     <span>happy seven year anniversary</span>
+
+    <mat-tab-group>
+        <mat-tab label="things i love about you"></mat-tab>
+        <mat-tab label="memories"></mat-tab>
+        <mat-tab label="Third"></mat-tab>
+    </mat-tab-group>
+
     <span class="example-spacer"></span>
     <button mat-icon-button class="heart-icon" aria-label="I love you!">
         <mat-icon>favorite</mat-icon>
     </button>
 </mat-toolbar>
 
-<mat-tab-group>
-    <mat-tab label="First"> Content 1 </mat-tab>
-    <mat-tab label="Second"> Content 2 </mat-tab>
-    <mat-tab label="Third"> Content 3 </mat-tab>
-</mat-tab-group>
